--- a/IcyImeNetwork/_Imports.razor
+++ b/IcyImeNetwork/_Imports.razor
@@ -8,10 +8,10 @@
 @using Microsoft.JSInterop
 @using IcyImeNetwork
 @using IcyImeNetwork.Layout
+@using IcyImeNetwork.components
+@using IcyImeNetwork.Models.Enums.Localizer.App
 @using Radzen
 @using Radzen.Blazor
 @using Blazored.LocalStorage
 @using System.Globalization
 @using Microsoft.Extensions.Localization
-@using IcyImeNetwork.Resources
-@using IcyImeNetwork.Services
