--- a/IcyImeNetwork/Layout/MainLayout.razor
+++ b/IcyImeNetwork/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
 @inject IStringLocalizer<App> _Localizer
+<RadzenComponents />
 <IcyImeNetwork.components.CultureSelector />
     @Body
