--- a/IcyImeNetwork/_Imports.razor
+++ b/IcyImeNetwork/_Imports.razor
@@ -10,8 +10,11 @@
 @using IcyImeNetwork.Layout
 @using IcyImeNetwork.components
 @using IcyImeNetwork.Models.Enums.Localizer.App
+@using IcyImeNetwork.components.Global.Landing.NavigationBar
+@using IcyImeNetwork.Services
 @using Radzen
 @using Radzen.Blazor
 @using Blazored.LocalStorage
 @using System.Globalization
 @using Microsoft.Extensions.Localization
+@using BlazorTransitionableRoute
