--- a/IcyImeNetwork/App.razor
+++ b/IcyImeNetwork/App.razor
@@ -1,12 +1,18 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@using Blazorise.Animate
+
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        <BlazoriseAnimate Animation="FadeIn" Duration="2s">
+            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        </BlazoriseAnimate>
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
-        </LayoutView>
+        <BlazoriseAnimate Animation="ZoomIn" Duration="1s">
+            <LayoutView Layout="@typeof(MainLayout)">
+                <p role="alert">Sorry, there's nothing at this address.</p>
+            </LayoutView>
+        </BlazoriseAnimate>
     </NotFound>
 </Router>
